added swagger for chats
